2012-05-30  Julien Bect  <julien.bect@supelec.fr>

	Reorganizing folders.

	* paramestim: New folder.
	* core/stk_param_estim.m: Moved to paramestim.
	* core/stk_remlqrg.m: Moved to paramestim.
	* utils/config/stk_set_root.m : Changed path.

	Miscellaneous changes.

	* sampling/stk_mindist.c: Fixed a comment.

2012-05-30  Emmanuel Vazquez <emmanuel.vazquez@supelec.fr>

	* almost-all-files: Changed the order of the arguments of the
	functions that use the structure 'model'. Now, 'model' is always
	the first argument. Because of this change, it seems better to
	make the argument 'param' in covariance functions coming in first
	position too.

2012-05-19  Julien Bect  <julien.bect@supelec.fr>

	Preparing headers for release 1.1.

	* almost-all-files: Updated headers (copyright, version).

	Miscellaneous changes.

	* core/stk_feval.m: Added optional argument 'progress_msg'.
	* utils/config/stk_select_optimizer.m: Minor change to avoid
	systematic checkinging which optimizer has to be used (as shown by
	the comments, this was a mistake...).
	* examples/example07.m: Fixed doc.

2012-05-02  Julien Bect  <julien.bect@supelec.fr>

	Improved compatibility with older versions of Matlab.

	* core/stk_param_estim: Added a try-catch block to catch "invalid
	parameter" errors generated by optimset().

2012-04-22  Julien Bect  <julien.bect@supelec.fr>

	Removed the undue dependency on the 'optim' package under Octave.

	* utils/config/stk_check_octave_packages.m: Removed dependency.

	Doc fixing.

	* README.txt: Fixed doc.
	* utils/config/stk_check_octave_packages.m: Fixed doc.

2012-04-21  Julien Bect  <julien.bect@supelec.fr>

	Docs fixing.

	* core/stk_make_matcov.m: Fixed doc.
	* core/stk_predict.m: Fixed doc.

2012-02-21  Julien Bect  <julien.bect@supelec.fr>

	Added a test for presence of GLPK in stk_check_octave_packages().

	* utils/config/stk_check_octave_packages.m: Added test.
	* README.txt: Fixed doc.

2012-02-20  Julien Bect  <julien.bect@supelec.fr>
