@@ -107,14 +107,14 @@ end % stk_addpath
 function path = stk_makepath(root)
 
 path = { ...
-    fullfile(root, 'core'             ), ...
-    fullfile(root, 'covfcs'           ), ...
-    fullfile(root, 'paramestim'       ), ...
-    fullfile(root, 'sampling'         ), ...
-    fullfile(root, 'utils'            ), ...
-    fullfile(root, 'utils', 'config'  ), ...
-    fullfile(root, 'utils', 'plot'    ), ...
-    fullfile(root, 'utils', 'misc'    ), ...
-    fullfile(root, 'utils', 'specfun' )   };
+    fullfile(root, 'core'            ), ...
+    fullfile(root, 'covfcs'          ), ...
+    fullfile(root, 'paramestim'      ), ...
+    fullfile(root, 'sampling'        ), ...
+    fullfile(root, 'misc'            ), ...
+    fullfile(root, 'misc', 'config'  ), ...
+    fullfile(root, 'misc', 'plot'    ), ...
+    fullfile(root, 'misc', 'misc'    ), ...
+    fullfile(root, 'misc', 'specfun' )   };
 
 end % stk_makepath
